<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

 <data>

 </data>

 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
     tools:context=".fragment.LoginFragment">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="@dimen/_320sdp"
      android:layout_height="@dimen/_210sdp"
      android:layout_marginTop="-20dp"
      android:scaleType="fitXY"
      android:src="@drawable/ic_home_shape"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.6"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:fontFamily="@font/poppins"
      android:text="@string/rentpayz"
      android:textColor="#ffff"
      android:textSize="@dimen/_26sdp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/login_to_contiune"
      android:textColor="#ffffff"
      android:textSize="@dimen/_12sdp"
      android:fontFamily="@font/poppins"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <Button
      android:id="@+id/tenantButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="20dp"
      android:background="@android:color/transparent"
      android:drawableTop="@drawable/ic_login_button_one"
      android:text="@string/tenant"
      android:textAllCaps="false"
      android:textColor="#ffffff"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
      android:id="@+id/landLordButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginTop="20dp"
      android:background="@android:color/transparent"
      android:drawableTop="@drawable/ic_login_button_two"
      android:text="@string/landlord"
      android:textAllCaps="false"
      android:textColor="#ffffff"
      android:textSize="@dimen/_14ssp"
      app:layout_constraintStart_toEndOf="@+id/tenantButton"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <ImageView
      android:layout_width="@dimen/_65sdp"
      android:layout_height="@dimen/_65sdp"
      android:layout_marginBottom="-3dp"
      android:src="@drawable/ic_bottom_shape"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="@dimen/_260sdp"
      android:layout_height="@dimen/_100sdp"
      android:layout_marginStart="36dp"
      android:layout_marginEnd="36dp"
      android:layout_marginTop="40dp"
      app:cardBackgroundColor="#553C78"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tenantButton">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/mobile_number"
       android:textColor="#fff"
       android:textSize="@dimen/_13ssp"
       android:layout_marginTop="@dimen/_12sdp"
       android:layout_marginLeft="@dimen/_11sdp"
       android:fontFamily="@font/poppins"/>
   <androidx.cardview.widget.CardView
       android:layout_width="@dimen/_240sdp"
       android:layout_height="@dimen/_40sdp"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="@dimen/_42sdp"
       app:cardBackgroundColor="#735B95"
       app:cardCornerRadius="10dp">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:backgroundTint="#fff" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="match_parent"
        android:textColor="#fff"
        android:fontFamily="@font/poppins"
        android:hint="@string/_90_xxxxx_yyyyy"
        android:textAlignment="center"
        android:textColorHint="#fff"
        android:backgroundTint="@android:color/transparent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_70sdp"
        android:textSize="@dimen/_13ssp"/>


    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_27sdp"
        android:background="@drawable/button_shape"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_next"
        android:layout_marginLeft="@dimen/_200sdp"/>

   </androidx.cardview.widget.CardView>
  </androidx.cardview.widget.CardView>


  <com.google.android.material.button.MaterialButton
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/poppins"
      android:text="@string/don_t_have_an_account_signup"
      android:textAllCaps="false"
      android:textColor="#ffffff"
      android:textSize="@dimen/_11sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView" />

 </androidx.constraintlayout.widget.ConstraintLayout>
</layout>